# Zeus

./: .dockerignore  .gitignore  CHANGELOG.md  CONNECTING.ko.md  CONNECTING.md  Dockerfile  LICENSE  README.ko.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  compose.yaml  pyproject.toml
.github/: pull_request_template.md
docs/: IMPLEMENTATION_STATUS.md  ZEUS_SYSTEM_DESIGN.md  acs-compat.md  commands.md  docker.md  hermes-comparison.md  hermes-grade-platform-master-design.md  hermes-live-platform-absorption-master-plan.md  ko.md  live-connection-architecture.md  private-dogfood-eval-boundary.md  zeus-hermes-live-opt-in-boundary.md  zeus-public-private-boundary.md  zeus-rc-release-boundary.md  zeus-w205-w212-hard-close.md
tests/: final_workloop_fixtures.py  test_adaptive_zeus_runtime.py  test_approval_handoff_dogfood.py  test_blueprint.py  test_capability_broker.py  test_claude_code_hook_gate.py  test_cli.py  test_cli_main_product_surface.py  test_cli_version.py  test_command_risk_dogfood.py  test_control_plane_state_store.py  test_credential_broker_runtime.py  test_current_architecture_language.py  test_decision_api_runtime.py  test_docs_domain_language.py  test_execution_integrity_runtime.py  test_final_cli_eval.py  test_final_objective_compiler.py  test_final_skill_evolution.py  test_final_verification_artifacts.py  test_flight_recorder.py  test_g006_cli_eval.py  test_g006_gateway_http_review_blockers.py  test_g006_gateway_review_blockers.py  test_g006_gateway_session_store.py  test_gateway_live_delivery_runtime.py  test_governed_objective_integration.py  (+183 more)
(+1271 files in other folders)
