[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zeus-agent"
version = "1.0.0a1"
description = "Local-first governance control plane for AI agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Orvek-dev" },
]
dependencies = [
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[project.scripts]
zeus = "zeus_agent.cli_main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/zeus_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
